fixed the overflow

--- a/src/Components/Navigation/Navigation.module.scss
+++ b/src/Components/Navigation/Navigation.module.scss
@@ -1,6 +1,6 @@
 .navigation {
   @media screen and (max-width: 1200px) {
-    position: absolute;
+    position: fixed;
     z-index: 10;
     background-color: white;
     width: 50%;
